Added comments for posts
